--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "directions-transition-group",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/TransitionGroup.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "jsx src dist"
   },
+  "keywords": [
+    "react",
+    "react-component",
+    "transition group"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/evindor/directions-transition-group.git"
